objects/Resolution__c.object
<CustomObject>
    <description>An object for use in the Arbitration Claims process to identify the resolution of a claim.</description>
    <fields>
        <fullName>Amount_Diagnostic__c</fullName>
        <label>Diagnostic Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Weighted__c</fullName>
        <formula>IF(ISPICKVAL(Resolution__c,&apos;ACV Issue Check&apos;), Amount__c, IF(ISPICKVAL(Resolution__c,&apos;ACV Credit Assigned&apos;), Amount__c/2, IF(ISPICKVAL(Resolution__c,&apos;ACV To Re-List&apos;), 2000, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Weighted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Amount should be entered for all valid complaint resolutions with the exception of &quot;ACV to Re-List&quot;</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Credits__c</fullName>
        <label>Approved Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auction_Number_Resolution__c</fullName>
        <formula>Case__r.Auction_Number__r.id__c</formula>
        <label>Auction Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avoidable_Complaint__c</fullName>
        <formula>IF(ISPICKVAL(complaint_id__r.avoidable__c, &quot;Yes&quot;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avoidable Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Field will be set by Process Builder that makes a direct reference between a Resolution record and a its Parent Complaint&apos;s Case record. Assists in rolling up data for reporting purposes.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Resolutions</relationshipLabel>
        <relationshipName>Resolutions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Complaint_Created__c</fullName>
        <description>Pulls the date the complaint was created  to the related resolution.</description>
        <formula>complaint_id__r.Complaint_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Complaint_Number__c</fullName>
        <formula>complaint_id__r.id__c</formula>
        <label>Complaint Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Under_500__c</fullName>
        <description>Used in the resolution flow to allow visibility into claims under 500 dollars and what the actual payout would be.</description>
        <label>Complaint Under $500</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Check_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked once a Credit/Check object is created related to this resolution.</description>
        <label>Credit/Check Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimate_Provided__c</fullName>
        <description>Was an estimate provided for the arb claim if yes the parts and labor fields will appear in the Enter Complaint resolution flow.</description>
        <label>Estimate Provided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fastlane__c</fullName>
        <description>This field is required on a resolution and will trigger a workflow to mark the entire Arb case as a Fastlane.</description>
        <inlineHelpText>Was this case treated as a &apos;Fastlane&apos; - Yes or No</inlineHelpText>
        <label>Fastlane</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goodwill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Goodwill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labor_Cost__c</fullName>
        <description>Cost of the labor on an Arb claim only entered when the Estimate= yes</description>
        <label>Labor Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_to_Close__c</fullName>
        <description>Days, Hours , Minutes from Complaint created to resolution created.</description>
        <formula>TEXT(
 FLOOR( CreatedDate  -  complaint_id__r.Complaint_Created__c )
)  &amp; &quot; Days &quot; &amp;
TEXT(
ROUND(MOD((CreatedDate  -  complaint_id__r.Complaint_Created__c )*24,24),0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD((CreatedDate  -  complaint_id__r.Complaint_Created__c )*1440,60),0)
) &amp;&quot; Minutes &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open to Close</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Diag__c</fullName>
        <label>Partner Diag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verity</fullName>
                </value>
                <value>
                    <fullName>One Guard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parts_Cost__c</fullName>
        <description>Cost of parts as it related to the Arb claim - only filled in when the estimate = yes</description>
        <label>Parts Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_Close_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Close Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Created_Date__c</fullName>
        <description>Date the resolution was created - inherently the date the complaint is closed - Created on a Resolution Created Date Timestamp</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>A field to identify the arbitration administrator&apos;s resolution decision.</description>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>ACV Credit Assigned</fullName>
                </value>
                <value>
                    <fullName>ACV Issue Check</fullName>
                </value>
                <value>
                    <fullName>ACV To Re-List</fullName>
                </value>
                <value>
                    <fullName>Seller Issue Check</fullName>
                </value>
                <value>
                    <fullName>Unwound Back To Seller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_guid__c</fullName>
        <description>GUID generated in Salesforce to identify this unique Resolution Record across Datahub systems</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Resolution guid</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Territory_Manager_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Territory Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_Complaint__c</fullName>
        <description>The field will be filled in on the flow for entering a resolution and should only be filled out on complaints under 500 dollars</description>
        <label>Total Value of Complaint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_with_Fees__c</fullName>
        <formula>Amount__c +  Amount_Diagnostic__c +  Tow_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total with Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tow_Fee__c</fullName>
        <label>Tow Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VCI_Email__c</fullName>
        <description>VCI email added mto be included in workflow Avoidable Arb email alerts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>VCI Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Valid_Complaint__c</fullName>
        <formula>IF(ISPICKVAL(complaint_id__r.valid__c, &quot;Yes&quot;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verity_Diagnosis_Completed__c</fullName>
        <description>Was a verity diagnosis completed on an arbitration, this is filled out in the resolution flow and will only be presented if the Estimate provided field is yes.</description>
        <label>Verity Diagnosis Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>complaint_id__c</fullName>
        <description>Stores a reference to the parent Complaint that a Resolution is for.</description>
        <label>Complaint</label>
        <referenceTo>Complaint__c</referenceTo>
        <relationshipLabel>Resolutions</relationshipLabel>
        <relationshipName>Resolutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>External Id for this resolution from ACV DB.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Resolution</label>
    <nameField>
        <displayFormat>ACR-{0000000}</displayFormat>
        <label>Resolution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resolutions</pluralLabel>
    <recordTypes>
        <fullName>Arb_Resolution_1</fullName>
        <active>true</active>
        <label>Arb Resolution 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locked_Resolution</fullName>
        <active>true</active>
        <description>Used to lock the resolution records once closed</description>
        <label>Locked Resolution</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Resolution_Amount_Required</fullName>
        <active>false</active>
        <description>Contains the logic governing when the Amount for a resolution must be filled out.

AND(ISPICKVAL(complaint_id__r.valid__c, &quot;Yes&quot;),
ISBLANK( Amount__c ))</description>
        <errorConditionFormula>AND((ISPICKVAL(complaint_id__r.valid__c, &quot;Yes&quot;)), 
AND (NOT(ISPICKVAL(Resolution__c, &quot;ACV to Re-List&quot;))), 
AND (NOT(ISPICKVAL(Resolution__c, &quot;Unwound Back To Seller&quot;))),
AND (NOT(ISPICKVAL(Resolution__c, &quot;None&quot;))), 
AND(ISPICKVAL( Estimate_Provided__c , &quot;no&quot;)),
(ISBLANK( Amount__c )))</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Resolution Amount is required for all Valid Complaints, except when Resolution is &quot;ACV to Re-List&quot; or &quot;Unwound Back To Seller&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resolved_Complaint_must_be_Completed</fullName>
        <active>false</active>
        <description>Complaint must have Valid marked as yes or no in order to be marked as resolved</description>
        <errorConditionFormula>ISBLANK(text(complaint_id__r.valid__c))</errorConditionFormula>
        <errorMessage>In order to resolve this complaint, please mark the Valid field on the complaint as Yes or No</errorMessage>
    </validationRules>
</CustomObject>